--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,10 +1,10 @@
 [alias]
 moonbase = " build --release -p moonbeam --no-default-features --features moonbase-native"
 moonbase-benchmarks = " build --release -p moonbeam --no-default-features --features moonbase-runtime-benchmarks"
-moonbase-rococo = " build --release -p moonbeam --no-default-features --features moonbase-native,rococo-native"
+moonbase-betanet = " build --release -p moonbeam --no-default-features --features moonbase-native,betanet-native"
 moonbase-tracing = " build --release -p moonbeam --features moonbase-native-tracing"
 moonriver = " build --release -p moonbeam --no-default-features --features moonriver-native"
-moonriver-rococo = " build --release -p moonbeam --no-default-features --features moonriver-native,rococo-native"
+moonriver-betanet = " build --release -p moonbeam --no-default-features --features moonriver-native,betanet-native"
 moonriver-kusama = " build --release -p moonbeam --no-default-features --features moonriver-native,kusama-native"
 moonbeam = " build --release -p moonbeam --no-default-features --features moonbeam-native"
-moonbeam-rococo = " build --release -p moonbeam --no-default-features --features moonbeam-native,rococo-native"
+moonbeam-betanet = " build --release -p moonbeam --no-default-features --features moonbeam-native,betanet-native"
