--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,7 +53,7 @@ jobs:
           echo "::set-output name=rustc::$(rustc --version)"
       - name: Build Node
         run: cargo build --release --all
-      - name: Save parachain binary
+      - name: Save allychain binary
         run: |
           mkdir -p build
           cp target/release/moonbeam build/moonbeam;
@@ -65,7 +65,7 @@ jobs:
 
   ####### Prepare and Deploy Docker images #######
 
-  generate-parachain-specs:
+  generate-allychain-specs:
     runs-on: ubuntu-latest
     needs: ["build"]
     steps:
@@ -82,11 +82,11 @@ jobs:
           chmod uog+x build/moonbeam
       - name: Generate specs
         run: |
-          MOONBEAM_BINARY=build/moonbeam scripts/generate-parachain-specs.sh
+          MOONBEAM_BINARY=build/moonbeam scripts/generate-allychain-specs.sh
       - name: Generate runtimes
         run: |
           MOONBEAM_BINARY=build/moonbeam scripts/generate-runtimes.sh
-      - name: Upload parachain specs
+      - name: Upload allychain specs
         uses: actions/upload-artifact@v2
         with:
           name: moonbeam
@@ -94,7 +94,7 @@ jobs:
 
   docker-moonbeam:
     runs-on: ubuntu-latest
-    needs: ["build", "generate-parachain-specs"]
+    needs: ["build", "generate-allychain-specs"]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -188,7 +188,7 @@ jobs:
 
   publish-draft-release:
     runs-on: ubuntu-latest
-    needs: ["build", "generate-parachain-specs", "build-srtool-runtimes"]
+    needs: ["build", "generate-allychain-specs", "build-srtool-runtimes"]
     outputs:
       release_url: ${{ steps.create-release.outputs.html_url }}
       asset_upload_url: ${{ steps.create-release.outputs.upload_url }}
