--- a/pallets/allychain-staking/Cargo.toml
+++ b/pallets/allychain-staking/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "parachain-staking"
+name = "allychain-staking"
 authors = [ "PureStake" ]
-description = "parachain staking pallet for collator selection and reward distribution"
+description = "allychain staking pallet for collator selection and reward distribution"
 edition = "2018"
 version = "3.0.0"
 
