--- a/runtime/common/Cargo.toml
+++ b/runtime/common/Cargo.toml
@@ -14,7 +14,7 @@ log = "0.4"
 pallet-asset-manager = { path = "../../pallets/asset-manager", optional = true, default-features = false }
 pallet-author-mapping = { path = "../../pallets/author-mapping", default-features = false }
 pallet-migrations = { path = "../../pallets/migrations", default-features = false }
-parachain-staking = { path = "../../pallets/parachain-staking", default-features = false }
+allychain-staking = { path = "../../pallets/allychain-staking", default-features = false }
 
 # Substrate
 frame-support = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
@@ -34,7 +34,7 @@ std = [
 	"pallet-author-mapping/std",
 	"pallet-evm/std",
 	"pallet-migrations/std",
-	"parachain-staking/std",
+	"allychain-staking/std",
 	"sp-core/std",
 	"sp-runtime/std",
 	"sp-std/std",
