--- a/client/evm-tracing/Cargo.toml
+++ b/client/evm-tracing/Cargo.toml
@@ -8,7 +8,7 @@ repository = "https://github.com/PureStake/moonbeam/"
 version = "0.1.0"
 
 [dependencies]
-codec = { package = "parity-scale-codec", version = "2.2", default-features = false }
+codec = { package = "axia-scale-codec", version = "2.2", default-features = false }
 ethereum-types = { version = "0.12.0" }
 evm-tracing-events = { path = "../../primitives/rpc/evm-tracing-events" }
 hex = { version = "0.4", features = [ "serde" ] }
