--- a/precompiles/assets-erc20/Cargo.toml
+++ b/precompiles/assets-erc20/Cargo.toml
@@ -14,7 +14,7 @@ slices = "0.2.0"
 precompile-utils = { path = "../utils", default-features = false }
 
 # Substrate
-codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [ "max-encoded-len" ] }
+codec = { package = "axia-scale-codec", version = "2.0.0", default-features = false, features = [ "max-encoded-len" ] }
 frame-support = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
 frame-system = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
 pallet-assets = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
@@ -33,7 +33,7 @@ derive_more = { version = "0.99" }
 serde = { version = "1.0.100" }
 sha3 = "0.8"
 
-codec = { package = "parity-scale-codec", version = "2.0.0", features = [ "max-encoded-len" ] }
+codec = { package = "axia-scale-codec", version = "2.0.0", features = [ "max-encoded-len" ] }
 pallet-timestamp = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
 scale-info = { version = "1.0", default-features = false, features = [ "derive" ] }
 sp-runtime = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
