--- a/precompiles/xcm_transactor/Cargo.toml
+++ b/precompiles/xcm_transactor/Cargo.toml
@@ -38,7 +38,7 @@ sha3 = "0.9"
 xcm-primitives = { path = "../../primitives/xcm/" }
 
 # Substrate
-codec = { package = "parity-scale-codec", version = "2.2", default-features = false, features = [ "max-encoded-len" ] }
+codec = { package = "axia-scale-codec", version = "2.2", default-features = false, features = [ "max-encoded-len" ] }
 pallet-balances = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
 pallet-timestamp = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
 scale-info = { version = "1.0", default-features = false, features = [ "derive" ] }
