--- a/precompiles/xtokens/Cargo.toml
+++ b/precompiles/xtokens/Cargo.toml
@@ -35,7 +35,7 @@ serde = "1.0.100"
 sha3 = "0.9"
 
 # Substrate
-codec = { package = "parity-scale-codec", version = "2.2", default-features = false, features = [ "max-encoded-len" ] }
+codec = { package = "axia-scale-codec", version = "2.2", default-features = false, features = [ "max-encoded-len" ] }
 pallet-balances = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
 pallet-timestamp = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
 scale-info = { version = "1.0", features = [ "derive" ] }
