--- a/primitives/rpc/debug/Cargo.toml
+++ b/primitives/rpc/debug/Cargo.toml
@@ -16,7 +16,7 @@ serde = { version = "1.0", optional = true, features = [ "derive" ] }
 serde_json = { version = "1.0", optional = true }
 
 # Substrate
-codec = { package = "parity-scale-codec", version = "2.2", default-features = false }
+codec = { package = "axia-scale-codec", version = "2.2", default-features = false }
 sp-api = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
 sp-core = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
 sp-io = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
