--- a/primitives/rpc/evm-tracing-events/Cargo.toml
+++ b/primitives/rpc/evm-tracing-events/Cargo.toml
@@ -11,7 +11,7 @@ version = "0.1.0"
 environmental = { version = "1.1.2", default-features = false }
 
 # Substrate
-codec = { package = "parity-scale-codec", version = "2.2", default-features = false }
+codec = { package = "axia-scale-codec", version = "2.2", default-features = false }
 
 # Ethereum
 ethereum = { version = "0.9.0", default-features = false, features = [ "with-codec" ] }
