--- a/primitives/rpc/txpool/Cargo.toml
+++ b/primitives/rpc/txpool/Cargo.toml
@@ -11,7 +11,7 @@ version = "0.6.0"
 ethereum = { version = "0.9.0", default-features = false, features = [ "with-codec" ] }
 
 # Substrate
-codec = { package = "parity-scale-codec", version = "2.2", default-features = false }
+codec = { package = "axia-scale-codec", version = "2.2", default-features = false }
 sp-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
 sp-io = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
 sp-runtime = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
