--- a/runtime/relay-encoder/Cargo.toml
+++ b/runtime/relay-encoder/Cargo.toml
@@ -16,7 +16,7 @@ xcm-primitives = { path = "../../primitives/xcm", default-features = false }
 # Substrate
 frame-system = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
 pallet-staking = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
-parity-scale-codec = { version = "2.0.0", default-features = false, features = [ "derive" ] }
+axia-scale-codec = { version = "2.0.0", default-features = false, features = [ "derive" ] }
 sp-runtime = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
 sp-std = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
 
@@ -39,8 +39,8 @@ std = [
 	"cumulus-primitives-core/std",
 	"frame-system/std",
 	"pallet-staking/std",
-	"parity-scale-codec/std",
-	"parity-scale-codec/std",
+	"axia-scale-codec/std",
+	"axia-scale-codec/std",
 	"relay-encoder-precompiles/std",
 	"sp-runtime/std",
 	"sp-std/std",
