Replaced axia-scale-codec -> parity-scale-codec

--- a/node/cli/Cargo.toml
+++ b/node/cli/Cargo.toml
@@ -6,7 +6,7 @@ version = "0.15.1"
 
 [dependencies]
 log = "0.4.8"
-axia-scale-codec = "2.2"
+parity-scale-codec = "2.2"
 structopt = "0.3.8"
 
 # Moonbeam
