--- a/pallets/ethereum-chain-id/Cargo.toml
+++ b/pallets/ethereum-chain-id/Cargo.toml
@@ -10,7 +10,7 @@ serde = { version = "1.0.101", optional = true, features = [ "derive" ] }
 # Substrate
 frame-support = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
 frame-system = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
-axia-scale-codec = { version = "2.2", default-features = false, features = [ "derive" ] }
+parity-scale-codec = { version = "2.2", default-features = false, features = [ "derive" ] }
 scale-info = { version = "1.0", default-features = false, features = [ "derive" ] }
 
 [features]
@@ -18,7 +18,7 @@ default = [ "std" ]
 std = [
 	"frame-support/std",
 	"frame-system/std",
-	"axia-scale-codec/std",
+	"parity-scale-codec/std",
 	"scale-info/std",
 	"serde",
 ]
