--- a/precompiles/allychain-staking/Cargo.toml
+++ b/precompiles/allychain-staking/Cargo.toml
@@ -15,7 +15,7 @@ allychain-staking = { path = "../../pallets/allychain-staking", default-features
 precompile-utils = { path = "../utils", default-features = false }
 
 # Substrate
-codec = { package = "axia-scale-codec", version = "2.2", default-features = false, features = [ "max-encoded-len" ] }
+codec = { package = "parity-scale-codec", version = "2.2", default-features = false, features = [ "max-encoded-len" ] }
 frame-support = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
 frame-system = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
 sp-core = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
