--- a/primitives/ext/Cargo.toml
+++ b/primitives/ext/Cargo.toml
@@ -14,7 +14,7 @@ ethereum-types = { version = "0.12.0", default-features = false }
 evm-tracing-events = { path = "../rpc/evm-tracing-events", default-features = false }
 
 # Substrate
-codec = { package = "axia-scale-codec", version = "2.2", default-features = false }
+codec = { package = "parity-scale-codec", version = "2.2", default-features = false }
 sp-externalities = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
 sp-runtime-interface = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
 sp-std = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
