--- a/.rustfmt.toml
+++ b/.rustfmt.toml
@@ -6,5 +6,5 @@ hard_tabs = true
 max_width = 100
 
 # TODO: add template for license checking.
-#       this will still fail for some licenses where e.g. Parity's license is used
+#       this will still fail for some licenses where e.g. AXIA's license is used
 # license_template_path = "FILE_TEMPLATE"
